changes related to subscription of observales

--- a/src/app/currency/currency-list/currency-list.component.html
+++ b/src/app/currency/currency-list/currency-list.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row" *ngIf="nullData">
-        Please Select the country for details.
+        Please Select the country for Currency details.
     </div>
     <div class="row" *ngIf="validResp">
         <table>
