--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="mycontainer"> <!-- container centers content on large screens -->
+<div class="mycontainer" id="main-container-section"> <!-- container centers content on large screens -->
   <div class="row">             <!-- responsive row has 12 columns by default -->
-    <div class="col-md-3">      <!-- uses 6 columns on medium and larger screens... -->
+    <div class="col-md-3" id="side-nav-bar">      <!-- uses 6 columns on medium and larger screens... -->
       <div class="mycontainer">
         <nav class="navbar navbar-light navbar-expand-sm px-0 flex-row flex-nowrap">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarWEX" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="col-md-9">      <!-- uses 12 columns on smaller than medium screens -->
-      <div class="row">
+      <div class="row" id="top-select-country">
         <div class="mycontainer">
             <select class="custom-select" id="country-list" (change)="selectCountry($event)">
                 <option selected disabled>Select Country</option>
