--- a/src/app/language/language-list/language-list.component.html
+++ b/src/app/language/language-list/language-list.component.html
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row" *ngIf="nullData">
-        Please Select the country for details.
+        Please Select the country for Language details.
     </div>
     <div class="row" *ngIf="validResp">
         <table>
